[fix] Fixed home colors for better visibility

--- a/style.css
+++ b/style.css
@@ -44,17 +44,18 @@ nav ul li {
 }
 
 nav ul li a {
-    color: #fff;
+    color: #1e1e20;
     text-decoration: none;
     font-size: 18px;
     position: relative;
+    font-weight: bold;
 }
 
 nav ul li a::after {
     content: '';
     width: 0;
     height: 3px;
-    background: #ff004f;
+    background: #f81909;
     position: absolute;
     left: 0;
     bottom: -6px;
@@ -73,6 +74,7 @@ nav ul li a:hover::after {
 .header-text h1{
     font-size: 60px;
     margin-top: 20px;
+    color: rgb(20, 19, 19);
 }
 
 .header-text h1 span{
